--- a/P2/index.css
+++ b/P2/index.css
@@ -6,8 +6,11 @@ button {
   border: solid;
   border-color: black;
   margin: 10px;
-  background-color: silver;
+  background-color: #8B8B88;
   width: 50px;
+  font-weight: bold;
+  font-family: "Consolas", monospace;
+  color: white;
 }
 p {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.16);
@@ -17,6 +20,9 @@ p {
   margin: 20px;
   background-color: darkKhaki;
   width: 320px;
+  font-weight: bold;
+  font-family: "Consolas", monospace;
+  color: black;
 }
 .general {
   padding: 10px;
@@ -28,9 +34,8 @@ p {
 }
 
 body {
-  background-image: url("imagen.jpg");
-  background-repeat: no-repeat;
-  height:  100%;
-  width: 100%;
+  background-image: url("cuadricula.jpg");
+  height:  100px;
+  width: 100px;
   color: white;
 }
